# hw5

./: CMakeLists.txt  TODO LIST
ClientServer/: Log.cc  SetupData.cc  SetupData.h  hw5Server.cc  makefile
ClientServer/cmds/: commands1
cmds/: logz  setup
hw5Client/: SafeQueue.cc  client.cc  makefile
hw5Client/cmds/: commands
hw5Server/: Log.cc  Log.h  SafeQueue.cc  SafeQueue.h  SetupData.cc  SetupData.h  client.cc  hw5Client.cc  hw5Server.cc  makefile  server.cc  setup
hw5Server/cmds/: setup
